--- a/src/app/features/categories/list/category-list.component.scss
+++ b/src/app/features/categories/list/category-list.component.scss
@@ -369,7 +369,7 @@
 
 /* Filtros - Padrão Moderno */
 .filters-card {
-  margin-bottom: 40px;
+  margin-bottom: 0;
   border-radius: 24px;
   box-shadow: 
     0 16px 50px rgba(0, 0, 0, 0.3),
@@ -605,7 +605,7 @@
     0 0 0 1px rgba(255, 255, 255, 0.1),
     inset 0 1px 0 rgba(255, 255, 255, 0.2);
   width: 100%;
-  margin: 0;
+  margin: 60px 0 0 0;
   position: relative;
   overflow: hidden;
   z-index: 2;
